syntax = "proto3";

package sd_backend.admin_manager;

// Message for a single user in the admin manager list
message AdminManagedUser {
  optional string open_id = 1;
  optional string nickname = 2;
  optional string name = 3;
  optional string phone_number = 4;
  optional string address = 5;
  optional string is_important = 6;
  optional string avatar = 7;
  optional string permission = 8;
}

// Response message for admin_manager endpoint
message AdminManagerResponse {
  repeated AdminManagedUser users = 1;
  int32 code = 2;
  string message = 3;
}

